--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nizam-app",
+  "name": "mortgagehackr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-   "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --fix",
