--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
