--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.3.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.8",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,9 +40,9 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/node": "^22.13.17",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.9",
-    "@types/node": "^22.13.17",
     "autoprefixer": "^10.0.1",
     "commitlint": "^19.8.0",
     "eslint": "^8.57.1",
