--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.0.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
@@ -44,6 +45,7 @@
     "@types/node": "^22.13.17",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.9",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
     "commitlint": "^19.8.0",
