--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.456.0",
     "next": "^15.0.3",
+    "nodemailer": "^7.0.3",
     "react": "^18.0.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.0.0",
@@ -43,6 +44,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.13.17",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.9",
     "@types/react-google-recaptcha": "^2.1.9",
