--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
